Change size of image

--- a/image.html
+++ b/image.html
@@ -4,6 +4,6 @@
         <title>My Web Page!</title>
     </head>
     <body>
-        <img src="https://static.toiimg.com/photo/msid-67586673/67586673.jpg?3918697" height="200" width="300">
+        <img src="https://static.toiimg.com/photo/msid-67586673/67586673.jpg?3918697" width="50%">
     </body>
 </html>
