--- a/style0.html
+++ b/style0.html
@@ -2,9 +2,15 @@
 <html>
     <head>
         <title>My Web Page!</title>
+        <style>
+            h1 {
+                color: blue;
+                text-align: center;
+            }
+        </style>
     </head>
     <body>
-        <h1 style="color:blue;text-align:center;">Welcome to my webpage!</h1>
+        <h1>Welcome to my webpage!</h1>
         <p>Hello! This is a paragraph of text</p>
         <p>This is another paragraph</p>
     </body>
