--- a/style0.html
+++ b/style0.html
@@ -4,13 +4,14 @@
         <title>My Web Page!</title>
         <style>
             h1 {
-                color: blue;
+                color: orange;
                 text-align: center;
             }
         </style>
     </head>
     <body>
         <h1>Welcome to my webpage!</h1>
+        <h1>The second headline</h1>
         <p>Hello! This is a paragraph of text</p>
         <p>This is another paragraph</p>
     </body>
