--- a/tables.html
+++ b/tables.html
@@ -2,6 +2,21 @@
 <html>
     <head>
         <title>My Web Page!</title>
+        <style>
+            table {
+                border: 2px solid black;
+                border-collapse: collapse;
+                width: 50%;
+            }
+            th, td {
+                border: 1px solid black;
+                padding: 5px;
+                text-align: center;
+            }
+            th {
+                background-color: lightgray;
+            }
+        </style>
     </head>
     <body>
         <h1>Presidents</h1>
@@ -17,7 +32,7 @@
                 <td>1789-1797</td>
             </tr>
             <tr>
-                <td>John</td>'
+                <td>John</td>
                 <td>Adams</td>
                 <td>1797-1801</td>
             </tr>
